--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ importlib-metadata==2.0.0
 joblib==0.17.0
 Keras-Preprocessing==1.1.2
 Markdown==3.3
-numpy==1.19.2
+numpy
 oauthlib==3.1.0
 opt-einsum==3.3.0
 pandas==1.1.2
@@ -30,12 +30,9 @@ requests-oauthlib==1.3.0
 rsa==4.6
 scikit-learn==0.23.2
 scipy==1.5.2
+sendgrid
 six==1.15.0
 soupsieve==2.0.1
-tensorboard==2.3.0
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.3.1
-tensorflow-estimator==2.3.0
 termcolor==1.1.0
 threadpoolctl==2.1.0
 ujson==3.2.0
